Update dbt-core to dbt

--- a/learning/templates/home.html
+++ b/learning/templates/home.html
@@ -730,7 +730,7 @@
                             <img src="{% static 'images/dbt_logo.svg' %}" 
                                 alt="dbt Logo" 
                                 style="width: 20px; height: 20px; object-fit: contain; margin-right: 8px; vertical-align: middle;">
-                            dbt-core
+                            dbt
                         </div>
                         <div class="tech-badge coming-soon">
                             <img src="{% static 'images/python_logo.svg' %}" 
@@ -817,7 +817,7 @@
                                     alt="dbt Logo" 
                                     style="width: 32px; height: 32px; object-fit: contain;">
                             </div>
-                            <h3 class="path-title">dbt-core</h3>
+                            <h3 class="path-title">dbt</h3>
                             <p class="path-description">
                                 Master data transformation and analytics engineering with dbt. 
                                 Learn to build reliable, tested data pipelines with SQL and Jinja.
