--- a/learning/templates/home.html
+++ b/learning/templates/home.html
@@ -691,6 +691,9 @@
                         <a class="nav-link" href="#how-it-works">How It Works</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'blogs' %}">Blogs</a>
                     </li>
                     <li class="nav-item ms-3">
